[project]
name = "mspacman-rl-project"
version = "0.1.0"
description = "MSPacman Reinforcement Learning project"
authors = [
    {name = "Juan Reséndiz", email = "jresendiz27@gmail.com"}
]
license = {text = "Apache 2.0 Licence"}
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12,<4"
tensorflow = { version = "2.19.0", extras = ["and-cuda"] }
tensorboard = "2.19.0"
tensorboard-data-server = "0.7.2"
pandas = "2.3.0"
pandas-stubs = "2.2.3.250527"
keras = "3.10.0"
autorom = { extras = ["accept-rom-license"], version = "^0.6.1" }
gymnasium = { extras = ["atari"], version = "1.1.1" }
ale-py = "^0.11.1"
autorom-accept-rom-license = "0.6.1"
wandb = "0.21.0"
psutil = "7.0.0"
imageio = "^2.37.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
